[package]
name = "tb-sb-differences-canary"
version = "0.1.0"
edition = "2021"
description = "A crate containing tests that fail or do not fail depending on how miri is configured. Useful as a canary if you are comparing TB and SB"
# If you need a different one, ask me, I can change this
license = "MIT OR Apache-2.0"

[dependencies]
